[tool.poetry]
name = "mihomo"
version = "1.0.0"
description = ""
authors = ["mobyw <mobyw66@gmail.com>"]
license = "MIT"
packages = [{include = "mihomo"}]
readme = "README.md"
repository = "https://github.com/Mar-7th/mihomo.py"

[tool.poetry.dependencies]
python = "^3.8"
msgspec = "^0.15.1"
starrailres = "^1.0.1"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
