[tool.poetry]
name = "mihomo"
version = "3.0.0"
description = "Library for API wrapper data from mihomo"
authors = ["mobyw <mobyw66@gmail.com>"]
license = "MIT"
packages = [{include = "mihomo"}]
readme = "README.md"
repository = "https://github.com/Mar-7th/mihomo.py"

[tool.poetry.dependencies]
python = "^3.9"
msgspec = "^0.19"
httpx = "^0.28"
starrailres = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
